WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75447
Ambiguous if-then-else in Source/WebKit/mac/Misc/WebNSPasteboardExtras.mm
https://bugs.webkit.org/show_bug.cgi?id=75447
Summary
Ambiguous if-then-else in Source/WebKit/mac/Misc/WebNSPasteboardExtras.mm
Bill Wendling
Reported
2012-01-02 14:21:22 PST
Clang discovered an ambiguous if-then-else in Source/WebKit/mac/Misc/WebNSPasteboardExtras.mm. Here's the code (around line 254): if (archive) if ([types containsObject:WebArchivePboardType]) [self setData:[archive data] forType:WebArchivePboardType]; else { // We should not have declared types that we aren't going to write (4031826). ASSERT(![types containsObject:NSRTFDPboardType]); ASSERT(![types containsObject:WebArchivePboardType]); } Clang suggests adding explicit braces. Indeed, the indenting suggests that the code should be different from what it is.
Attachments
Patch
(1.91 KB, patch)
2012-01-04 13:59 PST
,
Anders Carlsson
bweinstein
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2012-01-03 11:06:43 PST
This was introduced in <
http://trac.webkit.org/changeset/21533
>. No release build impact though, as it's only assertions. How did clang discover this? Did you use static analyzer, or different warnings flags with a regular build?
Bill Wendling
Comment 2
2012-01-03 13:00:44 PST
I was using ToT clang and doing a normal build. I believe it's a new warning flag that's on by default.
Anders Carlsson
Comment 3
2012-01-04 13:59:44 PST
Created
attachment 121145
[details]
Patch
Anders Carlsson
Comment 4
2012-01-04 14:03:03 PST
Committed
r104066
: <
http://trac.webkit.org/changeset/104066
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug