Ambiguous if-then-else in Source/WebKit/mac/Misc/WebNSPasteboardExtras.mm https://bugs.webkit.org/show_bug.cgi?id=75447

Reviewed by Brian Weinstein.

Resolve the ambiguity.

* Misc/WebNSPasteboardExtras.mm:
(-[NSPasteboard _web_writeImage:element:URL:title:archive:types:source:]):

Canonical link: https://commits.webkit.org/92341@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104066 268f45cc-cd09-0410-ab3c-d52691b4dbfc